# DogKeyboard

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MULTIPLEX_DESIGN.md  README.md  run-app-dev.ps1  run-app.ps1
.claude/: settings.json
display/: Cargo.toml  display.html
display/src/: main.rs
docs/: claude-code-chime.md  dogkbd_network_spec.md
obs-display/: Cargo.toml  overlay.html
obs-display/src/: main.rs  net.rs  web.rs
proto/: Cargo.toml
proto/src/: lib.rs  telem.rs
receiver/: Cargo.toml  overlay.html
receiver/src/: app.rs  keys.rs  main.rs  net.rs  overlay.rs  router.rs  telemetry.rs
receiver/src/inject/: linux.rs  mod.rs  windows.rs
sender/: Cargo.toml
sender/src/: main.rs
tools/: README.md  claude-status.ps1  game_bridge.py  trophy_monitor.py
