[package]
name = "dogkbd-display"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DOGKBD Pi-side exhibit display: receives telemetry and serves the monitor web app"

[dependencies]
dogkbd-proto.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
