[package]
name = "dogkbd-obs-display"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DOGKBD OBS Browser Source overlay — terminal-themed keystroke display"

[dependencies]
dogkbd-proto.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
