[package]
name = "dogkbd-receiver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DOGKBD receiver GUI for Windows/Linux"

[dependencies]
dogkbd-proto.workspace = true
clap = { version = "4", features = ["derive"] }
eframe = "0.29"
rodio = "0.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
uinput = "0.1"
